features: - JWT mostra "role": "ADMIN" - SecurityContext tem ROLE_ADMIN - hasRole('ADMIN') funciona - USER recebe 403 em endpoint ADMIN